fixed connecting up the path to the text file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "java.project.sourcePaths": [
-        "main",
-        "src/application/src"
+        "src/application/src",
+        "src/application/words1"
     ]
 }
